# Practice-Prototypes

./: .gitignore  .philosophy  README.md  TODO  setup
Experiments/gpu/Intel-Xe-GPU/integrated-test-2/: CMakeLists.txt  build_and_run.sh  do.sh  main.cpp  mandelbrot.comp  setup.sh
Notes/: bash-invisible-typing.txt  check-9001.sh  (+1 more)
Prototypes/AudioGet/: .gitignore  cronconfig  cronconfig-src  dependencies  kickoff.sh  notes.txt  pipeliner  pull.sh  pyproject.toml  rsync-cronjob-notes.txt  source-this-to-start
Prototypes/AudioGet/Data/: input-playlist-url  pop  push-unique  top
Prototypes/AudioGet/Data-Raw/Data/: .gitignore  append  audio-duration-notes.txt  push-unique  see-newest.sh
Prototypes/AudioGet/Data-Raw/Operations/: get-audio
Prototypes/AudioGet/Data-Raw/Utilities/: get-next-audio  move-and-wait
Prototypes/AudioGet/Experiments/: mp3-breaker  playlist-to-mp3s  playlist_to_urls.py
Prototypes/AudioGet/Experiments/download-yt-audio/: download-yt-audio
Prototypes/AudioGet/Experiments/savetube-reverse-eng/: notes.txt  pipeliner
Prototypes/AudioGet/File-Segmentation/: segment-audio
Prototypes/AudioGet/Tests/: test-pl-to-urls
Prototypes/AudioGet/Utilities/: get-next-audio  move-and-wait  playlist-to-urls  url-to-mp3
Prototypes/AudioGet/src/audioget/: playlist-to-urls  urls-to-something
Prototypes/nutritionFacts/Server/: pyproject.toml  server-start  start-server.sh  stop-server.sh
Prototypes/nutritionFacts/Server/Falcon-Uvicorn/: activate-poetry.sh  move-poetry.sh  poetry-additions.sh  poetry-config.sh  start-server.sh
Prototypes/nutritionFacts/Server/Falcon-Uvicorn/src/nf_server/logs/: err.txt
Prototypes/nutritionFacts/Server/Falcon-Uvicorn/src/nf_server/services/: data_cleaning.py  data_transformer.py
Prototypes/nutritionFacts/Server/FalconServer/nutritionFactsFalconServer/: pyproject.toml
Prototypes/nutritionFacts/Server/actix/client/: ACTUALLY-READ-ME.sh  package.json
Prototypes/nutritionFacts/Server/actix/client/pages/: index.tsx
Prototypes/nutritionFacts/Server/actix/server/: Cargo.toml
Prototypes/nutritionFacts/Server/actix/server/config/: default.toml
Prototypes/nutritionFacts/Server/dns/: configure-pihole-dns.sh  install-pihole.sh
Prototypes/nutritionFacts/Server/falcon/: app.py
Prototypes/nutritionFacts/Server/install/: 1-activate-poetry.sh  get-falcon.sh
Prototypes/nutritionFacts/Server/nginx/: stop.sh
Prototypes/nutritionFacts/Server/nginx/conf/: nginx.conf
Prototypes/nutritionFacts/Server/nginx/nginx-1.28.0/objs/: Makefile  nginx  ngx_auto_config.h
Prototypes/nutritionFacts/Server/server/config/: set-config.sh
Prototypes/nutritionFacts/Server/src/nf_server/: app.py  start-server.sh
Prototypes/nutritionFacts/Server/src/nf_server/data-processing/: field-dropper.py  fix-json-commas.py
Prototypes/nutritionFacts/Server/src/nf_server/services/: data-refiner.sh  data_cleaning.py  data_transformer.py  drop_fields.py  drop_fields_from_json.py  nutrient-fields-to-retain
Starters/Backend/Servers/poetry-uvicorn-falcon/asgi-starter/: pyproject.toml
combinations/size-2/redis-falcon/server/falcon-redis/: pyproject.toml  run-falcon.sh
combinations/size-2/redis-falcon/server/falcon-redis/falcon_redis/: falcon_app.py
combinations/size-3/nextui-graphql-actix-graphql-redis/actix/gql-actix-server/: Cargo.toml
combinations/size-3/nextui-graphql-actix-graphql-redis/actix/gql-actix-server/src/db/: models.rs
combinations/size-3/nextui-graphql-actix-graphql-redis/actix/gql-actix-server/src/graphql/: schema.rs
(+374 files in other folders)
