[project]
name = "audioget"
version = "0.1.0"
description = "drink information through your ears"
authors = [
    {name = "Vincent Steffens"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
