[project]
# Edit name 1/2
name = "asgi-starter"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "falcon (>=4.0.2,<5.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

# Edit name .............vvvvvvvvvvv
[tool.poetry]          # Edit name 2/2
packages = [{include = "asgi_starter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
