[package]
name = "gql-actix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
async-graphql = "7.0.11"
async-graphql-actix-web = "7.0.11"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
